--- a/src/modules/app/App.scss
+++ b/src/modules/app/App.scss
@@ -1,13 +1,13 @@
 .App {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    //animation: App-logo-spin infinite 20s linear;
     height: 80px;
   }
 
   .App-header {
     text-align: center;
     background-color: #222;
-    height: 150px;
+    //height: 150px;
     padding: 20px;
     color: white;
   }
@@ -20,13 +20,5 @@
 
 .App-intro {
   font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding: 0 16px 16px;
 }
