--- a/src/modules/list/ServersList.scss
+++ b/src/modules/list/ServersList.scss
@@ -1,9 +1,15 @@
 .servers-list {
-  .ant-avatar {
-    border-radius: 0;
+  .ant-list-item-extra {
+    margin-left: auto;
   }
-  .ant-list-item-meta {
+  .extra-wrapper {
+    width: 132px;
     display: flex;
+    flex-direction: column;
     align-items: center;
+    height: 100%;
+    justify-content: center;
+    border: 1px solid #d0d0d0;
+    border-radius: 4px;
   }
 }
